MDEV-5674 Valgrind warnings "Conditional jump or move depends on uninitialised value" in create_sort_index with small sort_buffer_size

*found_rows wasn't initialized when filesort() failed
(it didn't matter, but valgrind was unhappy)